[package]
name = "WagDSTools"
version = "0.1.0"
authors = ["DStockdale"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.shtml

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.33"

[dev-dependencies]
wasm-bindgen-test = "0.2"
